syntax = "proto3";

package api.console.resource;

option go_package = "github.com/omalloc/kratos-console/api/console/resource;resource";
option java_multiple_files = true;
option java_package = "api.console.resource";

import "google/api/annotations.proto";
import "protobuf/pagination.proto";

service Namespace {
	rpc List (NamespaceListRequest) returns (NamespaceListReply) {
		option (google.api.http).get = "/api/console/namespace";
	}

	rpc SimpleList (NamespaceSimpleListRequest) returns (NamespaceSimpleListReply) {
		option (google.api.http).get = "/api/console/namespace/-/options";
	}

	rpc Get (NamespaceGetRequest) returns (NamespaceGetReply) {
		option (google.api.http).get = "/api/console/namespace/{id}";
	} 

	rpc Create (NamespaceCreateRequest) returns (NamespaceCreateReply) {
		option (google.api.http) = {
			post: "/api/console/namespace";
			body: "*";
		};
	}

	rpc Update (NamespaceUpdateRequest) returns (NamespaceUpdateReply) {
		option (google.api.http) = {
			put: "/api/console/namespace/{id}";
			body: "*";
		};
	}

	rpc Delete (NamespaceDeleteRequest) returns (NamespaceDeleteReply) {
		option (google.api.http).delete = "/api/console/namespace/{id}";
	}
}

message NamespaceInfo {
	int64 id = 1;
	string name = 2;
	string alias = 3;
	string description = 4;
	string created_at = 5;
	string updated_at = 6;
	int32 running = 7;
}

message NamespaceListRequest {
	protobuf.Pagination pagination = 1;
	string name = 2;
}

message NamespaceListReply {
	protobuf.Pagination pagination = 1;
	repeated NamespaceInfo data = 2;
}

message NamespaceSimple {
	int64 id = 1;
	string name = 2;
	string alias = 3;
}
message NamespaceSimpleListRequest {
}
message NamespaceSimpleListReply {
	repeated NamespaceSimple data = 1;
}

message NamespaceGetRequest {
	string id = 1;
}

message NamespaceGetReply {
	NamespaceInfo data = 1;
}

message NamespaceCreateRequest {
	string name = 1;
	string alias = 2;
	string description = 3;
}

message NamespaceCreateReply {
	NamespaceInfo data = 1;
}

message NamespaceUpdateRequest {
	int64 id = 1;
	string name = 2;
	string alias = 3;
	string description = 4;
}

message NamespaceUpdateReply {
	NamespaceInfo data = 1;
}

message NamespaceDeleteRequest {
	int64 id = 1;
}

message NamespaceDeleteReply {
}
